# stacked_errors

./: CHANGELOG.md  Cargo.toml  README.md
.github/: ci.yml
.github/workflows/: ci.yml
src/: ensure.rs  error.rs  error_kind.rs  fmt.rs  lib.rs  macros.rs  map_add_err.rs  special.rs  stackable_err.rs
tests/: debug.rs  ensure.rs  test.rs
