[package]
name = "stacked_errors"
version = "0.7.0"
edition = "2021"
# Change the test suite version when changing this.
rust-version = "1.81"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/stacked_errors"
documentation = "https://docs.rs/stacked_errors"
categories = ["data-structures", "no-std"]
keywords = ["error", "error-handling", "stacked-errors", "no_std"]
description = "high level error propogation with software controlled backtraces"

[dependencies]
smallbox = { version = "0.8", default-features = false }
thin-vec = "0.2"
thiserror = "2"
owo-colors = { version = "4.1", default-features = false }

[dev-dependencies]
ron = { version = "0.8", default-features = false }
serde_json = { version = "1.0" }

[features]
default = []
